# balance

./: .flake8  .gitignore  .pre-commit-config.yaml  .pyre_configuration  .pyre_configuration.external  404.html  ARCHITECTURE.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  LICENSE-DOCUMENTATION  NEWS.md  README.md  index.html  lunr-index-1753900967952.json  lunr-index-1754500652680.json  lunr-index-1754655105295.json  lunr-index-1754833791795.json  lunr-index-1755112351177.json  lunr-index-1755716985234.json  lunr-index-1756527476563.json  lunr-index-1758251665411.json  lunr-index-1758701826185.json  lunr-index-1758782505205.json  lunr-index-1760477842321.json  lunr-index-1761065528881.json  lunr-index-1761557875389.json  lunr-index-1761682904895.json  lunr-index-1761738287576.json  lunr-index-1762161023930.json  lunr-index-1762613384916.json  lunr-index-1762962607884.json  lunr-index-1762972031507.json  lunr-index-1762981491083.json  lunr-index-1762981851783.json  lunr-index-1763035342684.json  lunr-index-1763328929083.json  lunr-index-1764038374031.json  lunr-index-1764616695979.json  (+252 more)
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: feature_request.md  support_question.md
.github/badges/: coverage.json
.github/workflows/: build-and-test.yml  cleanup-copilot-artifacts.yml  codeql.yml  coverage.yml  deploy-website.yml  diff-diff-canary.yml  notebook-ci.yml  release.yml
.pyre/: pyre.stderr
_src/api_reference/: index.md
_src/docs/: changelog.md  contributing.md  overview.md
_src/tutorials/: balance_cli_tutorial.mdx  balance_transformations_and_formulas.mdx  comparing_cbps_in_r_vs_python_using_sim_data.mdx  index.mdx  quickstart_cbps.mdx
api_reference/doctrees/: balance.adjustment.doctree  balance.balance_frame.doctree  balance.balancedf_class.doctree  balance.cli.doctree  balance.doctree  balance.sample_class.doctree  balance.sample_frame.doctree  balance.stats_and_plots.ascii_plots.doctree  balance.stats_and_plots.doctree  balance.stats_and_plots.general_stats.doctree  balance.stats_and_plots.impact_of_weights_on_outcome.doctree  balance.stats_and_plots.love_plot.doctree  balance.stats_and_plots.weighted_comparisons_plots.doctree  balance.stats_and_plots.weighted_comparisons_stats.doctree  balance.stats_and_plots.weighted_stats.doctree  balance.stats_and_plots.weights_stats.doctree  balance.summary_utils.doctree  balance.testutil.doctree  balance.typing.doctree  balance.util.doctree  balance.weighting_methods.adjust_null.doctree  balance.weighting_methods.cbps.doctree  balance.weighting_methods.doctree  balance.weighting_methods.ipw.doctree  balance.weighting_methods.poststratify.doctree  balance.weighting_methods.rake.doctree  environment.pickle  index.doctree
api_reference/html/: .buildinfo  balance.adjustment.html  balance.balance_frame.html  balance.balancedf_class.html  balance.cli.html  balance.html  balance.sample_class.html  balance.sample_frame.html  balance.stats_and_plots.ascii_plots.html  balance.stats_and_plots.general_stats.html  balance.stats_and_plots.html  balance.stats_and_plots.impact_of_weights_on_outcome.html  balance.stats_and_plots.love_plot.html  balance.stats_and_plots.weighted_comparisons_plots.html  balance.stats_and_plots.weighted_comparisons_stats.html  balance.stats_and_plots.weighted_stats.html  balance.stats_and_plots.weights_stats.html  balance.summary_utils.html  balance.testutil.html  balance.typing.html  balance.util.html  balance.weighting_methods.adjust_null.html  balance.weighting_methods.cbps.html  balance.weighting_methods.html  balance.weighting_methods.ipw.html  balance.weighting_methods.poststratify.html  balance.weighting_methods.rake.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
assets/css/: styles.21c9ecd5.css  styles.24990c4f.css  styles.2cc1dfcb.css  styles.3dd7ba07.css  styles.59da32c8.css  styles.66a6f7b1.css  styles.8788edea.css  styles.b9427fc0.css  styles.c55a4ab0.css  styles.ea435840.css  styles.f1da0727.css
assets/js/: 0.15ce0b47.js  0.96aec541.js  00bf1f6a.17c47406.js  00bf1f6a.4a265f58.js  00bf1f6a.817cd378.js  00bf1f6a.b59b87c3.js  00bf1f6a.d410fa2c.js  00bf1f6a.d87a18bb.js  00bf1f6a.f55fa1c4.js  00d5cd66.84c7ca3f.js  00d5cd66.96ea8714.js  00d5cd66.ce6e636d.js  00d5cd66.d617b865.js  00d5cd66.ed58516f.js  01a85c17.4c510bd5.js  14.08f07360.js  (+1562 more)
balance/: __init__.py  adjustment.py  balance_frame.py  balancedf_class.py  cli.py  csv_utils.py  estimators.py  sample_class.py  sample_frame.py  summary_utils.py  testutil.py  typing.py  util.py
balance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
benchmark/: benchmark_ipfn.py
benchmarks/: benchmark_ipfn.py
blog/: atom.xml  index.html  rss.xml
markdown-page/: index.html
scripts/: make_docs.sh
sphinx/: .gitignore  balance.rst  conf.py  index.rst  make.bat
tests/: __init__.py  conftest.py  shared_utils.py  test_adjust_null.py  test_adjustment.py  test_ascii_plots.py  test_balance_frame.py  test_balancedf.py  test_cbps.py  test_cli.py  test_datasets.py  test_diagnostics_standalone.py  test_e2e_from_tutorials.py  test_e2e_via_tutorials.py  test_estimators.py  test_general_stats.py  test_interop_diff_diff.py  test_ipw.py  test_logging.py  test_poststratify.py  test_rake.py  test_sample.py  test_sample_diagnostics_helper.py  test_sample_frame.py  test_sample_internal.py  test_stats_and_plots.py  test_testutil.py  test_util.py  test_util_data_transformation.py  test_util_input_validation.py  test_util_logging_utils.py  test_util_model_matrix.py  test_util_pandas_utils.py  test_weighted_comparisons_plots.py
tutorials/: balance_ascii_plots.ipynb  balance_cli_tutorial.ipynb  balance_diff_diff_brfss.ipynb  balance_quickstart.ipynb  balance_quickstart_cbps.ipynb  balance_quickstart_ipw.ipynb  balance_quickstart_new_api.ipynb  balance_quickstart_poststratify.ipynb  balance_quickstart_rake.ipynb  balance_transformations_and_formulas.ipynb  comparing_cbps_in_r_vs_python_using_sim_data.ipynb
website/: .gitignore  README.md  babel.config.js  docusaurus.config.js  package.json  sidebars.js
(+176 files in other folders)
