[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "balance"
description = "balance is a Python package offering a simple workflow and methods for dealing with biased data samples when looking to infer from them to some target population of interest."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
authors = [
    { name = "Facebook, Inc." },
]
keywords = [
    "balance",
    "statistics",
    "bias",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.21.0,<2.0; python_version<'3.12'",
    "numpy>=1.24.0; python_version>='3.12'",
    "pandas>=1.5.0,<2.4.0; python_version<'3.12'",
    "pandas>=2.0.0; python_version>='3.12'",
    "scipy>=1.7.0,<1.14.0; python_version<'3.12'",
    "scipy>=1.11.0; python_version>='3.12'",
    "scikit-learn>=1.0.0,<1.4.0; python_version<'3.12'",
    "scikit-learn>=1.3.0; python_version>='3.12'",
    "ipython",
    "patsy",
    "seaborn",
    "plotly",
    "matplotlib",
    "statsmodels",
    "session-info",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "setuptools_scm",
    "wheel",
    "pytest",
    "sphinx",
    "notebook",
    "nbconvert",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/facebookresearch/balance"

[tool.setuptools]
package-data = { "*" = ["*.csv"] }

[tool.setuptools.packages.find]
include = ["balance*"]

[tool.setuptools_scm]
write_to = "version.py"

[tool.ufmt]
formatter = "ruff-api"
sorter = "usort"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.usort]
first_party_detection = false
