[build-system]
requires = [
    "setuptools>=77",
    "setuptools_scm[toml]",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "balance"
description = "balance is a Python package offering a simple workflow and methods for dealing with biased data samples when looking to infer from them to some target population of interest."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    { name = "Facebook, Inc." },
]
keywords = [
    "balance",
    "statistics",
    "bias",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.8.0",
    "ipython",
    "patsy",
    "seaborn",
    "plotly",
    "matplotlib",
    "statsmodels",
    "session-info",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "setuptools_scm",
    "wheel",
    "pytest",
    "sphinx",
    "notebook",
    "nbconvert",
    "pre-commit",
]

[project.urls]
homepage = "https://import-balance.org/"
repository = "https://github.com/facebookresearch/balance"
changelog = "https://github.com/facebookresearch/balance/blob/main/CHANGELOG.md"

[tool.setuptools]
package-data = { "*" = ["*.csv"] }

[tool.setuptools.packages.find]
include = ["balance*"]

[tool.setuptools_scm]
write_to = "version.py"

[tool.ufmt]
formatter = "ruff-api"
sorter = "usort"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.usort]
first_party_detection = false
